--- a/_source/2017-09-10-nse.Rmd
+++ b/_source/2017-09-10-nse.Rmd
@@ -7,7 +7,7 @@ date: "2017-09-10 14:30:00"
 output: html_document
 tags: [R, tidy evaluation, programming, non-standard evaluation, base R]
 ---
-As with many aspects of the tidyverse, its non-standard evaluation (NSE) implementation is not something entirely new, but built on top of base R. What makes this one so challenging to get your mind around, is that the [Honorable Doctor Sir Lord General](http://maraaverick.rbind.io/2017/08/tidyeval-resource-roundup/) and friends brought concepts to the realm of the mortals that many of us had no, or only a vague, understanding of. Earlier, I gave an overview of [the most common actions in tidy eval](https://edwinth.github.io/blog/dplyr-recipes/). Although appreciated by many, it left me unsatisfied, because it made clear to me I did not really understand NSE. Both in base R and in tidy eval. Therefore, I bit the bullet and really studied it for a few evenings. Starting with base R NSE, and later learning what tidy eval actually adds to it. I decided to share the things I learned in this, rather lengthy, blog. I think it captures the essentials in NSE, although it surely is incomplete and might be even erronous at places. Still, I hope you find it worthwhile and it will help you understand NSE better and apply it with more confidence. 
+As with many aspects of the tidyverse, its non-standard evaluation (NSE) implementation is not something entirely new, but built on top of base R. What makes this one so challenging to get your mind around, is that the [Honorable Doctor Sir Lord General](http://maraaverick.rbind.io/2017/08/tidyeval-resource-roundup/) and friends brought concepts to the realm of the mortals that many of us had no, or only a vague, understanding of. Earlier, I gave an overview of [the most common actions in tidy eval](https://edwinth.github.io/blog/dplyr-recipes/). Although appreciated by many, it left me unsatisfied, because it made clear to me I did not really understand NSE. Neither in base R, nor in tidy eval. Therefore, I bit the bullet and really studied it for a few evenings. Starting with base R NSE, and later learning what tidy eval actually adds to it. I decided to share the things I learned in this, rather lengthy, blog. I think it captures the essentials in NSE, although it surely is incomplete and might be even erronous at places. Still, I hope you find it worthwhile and it will help you understand NSE better and apply it with more confidence. 
 
 My approach was listing a number of terms and study them one by one. Mainly consulting [Advanced R](http://adv-r.hadley.nz/) and the [R Language Definition](ftp://cran.r-project.org/pub/R/doc/manuals/r-release/R-lang.html). For tidy eval I leaned heavily on the [Programming with dplyr vignette](https://cran.r-project.org/web/packages/dplyr/vignettes/programming.html) and the function documentations. This is also how this blog post is built. We are hopping from term to term, to we see how they relate. You will find references to the sources in the text, in case you want to read more about a topic.
 
