--- a/_posts/2017-09-10-nse.md
+++ b/_posts/2017-09-10-nse.md
@@ -7,78 +7,38 @@ date: "2017-09-10 14:30:00"
 output: html_document
 tags: [R, tidy evaluation, programming, non-standard evaluation, base R]
 ---
+
 As with many aspects of the tidyverse, its non-standard evaluation (NSE) implementation is not something entirely new, but built on top of base R. What makes this one so challenging to get your mind around, is that the [Honorable Doctor Sir Lord General](http://maraaverick.rbind.io/2017/08/tidyeval-resource-roundup/) and friends brought concepts to the realm of the mortals that many of us had no, or only a vague, understanding of. Earlier, I gave an overview of [the most common actions in tidy eval](https://edwinth.github.io/blog/dplyr-recipes/). Although appreciated by many, it left me unsatisfied, because it made clear to me I did not really understand NSE. Neither in base R, nor in tidy eval. Therefore, I bit the bullet and really studied it for a few evenings. Starting with base R NSE, and later learning what tidy eval actually adds to it. I decided to share the things I learned in this, rather lengthy, blog. I think it captures the essentials in NSE, although it surely is incomplete and might be even erronous at places. Still, I hope you find it worthwhile and it will help you understand NSE better and apply it with more confidence. 
 
 My approach was listing a number of terms and study them one by one. Mainly consulting [Advanced R](http://adv-r.hadley.nz/) and the [R Language Definition](ftp://cran.r-project.org/pub/R/doc/manuals/r-release/R-lang.html). For tidy eval I leaned heavily on the [Programming with dplyr vignette](https://cran.r-project.org/web/packages/dplyr/vignettes/programming.html) and the function documentations. This is also how this blog post is built. We are hopping from term to term, to we see how they relate. You will find references to the sources in the text, in case you want to read more about a topic.
+
+*Note this is v2, in which the `expression` section is rewritten. To see earlier versions see [here](https://github.com/EdwinTh/EdwinTh.github.io/releases).*
 
 # Base R, non-standard evaluation
 
 ## `expression`
 
-In standard evaluation R is like a child that receives candy from his grandmother and puts it in his mouth immediately. Every input is evaluated right away. This can be collecting the value of an object or letting a function do a calculation. An **expression** is some R code that is ready to be evaluated, but is not evaluated yet. Rather it is captured and saved for later. Think of it as the child's father telling he can't have the candy until they get home. The base R way of creating an expression is by using `parse(text = "<string input>")`.
+In standard evaluation R is like a child that receives candy from his grandmother and puts it in his mouth immediately. Every input is evaluated right away. An **expression** is some R code that is ready to be evaluated, but is not evaluated yet. Rather it is captured and saved for later. Think of it as the child's father telling he can't have the candy until they get home. Expressions break down in four categories; constants (like 4, TRUE), names (variable names referring to an object), calls (letting functions do a calculation) and pairlists. We will only look at `names` and `calls` here. Constants are equal to their value when captured in an expression, if you want to learn about pairlists see [Adv-R](http://adv-r.hadley.nz/metaprogramming.html#pairlists). The act of capturing the expression instead of evaluating it, is called quoting. This is done by the `quote()` function.
 
 
 ```r
 library(tidyverse)
-expr <- parse(text = "5 + 5")
-expr
-```
-
-```
-## expression(5 + 5)
-```
-
-Note that the `text` argument is not the first argument of `parse()` and thus must be named. To **evaluate** expression we run `eval()` on the expression.
-
-
-```r
-eval(expr)
-```
-
-```
-## [1] 10
-```
-
-When giving multiple lines to `parse()` it will create a list-like object of multiple expressions. 
-
-
-```r
-multi_exp <- parse(text = c(
-  "x
-   3 + 3"
-))
-multi_exp %>% class()
-```
-
-```
-## [1] "expression"
-```
-
-```r
-multi_exp %>% length()
-```
-
-```
-## [1] 2
-```
-
-```r
-multi_exp[[1]]
-```
-
-```
-## x
-```
-
-```r
-multi_exp[[1]] %>% class()
+quote(x) %>% class()
 ```
 
 ```
 ## [1] "name"
 ```
 
-Strange, the first element of the expression is not an `expression`, but a `name`. What's up with that?
+```r
+quote(mean(1:10)) %>% class()
+```
+
+```
+## [1] "call"
+```
+
+Confusingly, there is also the class `expression`, created by the `parse()` and `expression()` functions. You should think of these as lists of names and calls. Those will not be furtherly discussed here. When I use the term *expression* I am referring to the concept of R code that still needs to be evaluated, not objects of class `expression`.
 
 ## `name`
 
@@ -89,11 +49,11 @@ When creating an object in R, you are binding the name of the object to a value.
 x <- 50
 ```
 
-Normally, we give R the object name to retrieve the corresponding value. However, when we save the objects name as an expression, it is not evaluated but stored as `name` object. (Confusingly, when the expression of length 1, it is of class `expression` instead of class `name`). So `name` is a subclass of expression, it is created when the unevaluated R code will retrieve the value of an object once evaluated.
+Normally, we give R the object name to retrieve the corresponding value. However, when we save the objects name as an expression, it is not evaluated but stored as `name` object. 
 
 
 ```r
-exp_x <- parse(text = "x")
+exp_x <- quote(x)
 eval(exp_x)
 ```
 
@@ -104,7 +64,7 @@ This way we can build a request for later. The variable requested for doesn't ev
 
 
 ```r
-eval_me <- parse(text = "y")
+eval_me <- quote(y)
 eval(eval_me)
 ```
 
@@ -121,26 +81,7 @@ eval(eval_me)
 ## [1] "I am ready"
 ```
 
-Now you might wonder, in the tidyverse packages I can conveniently pass bare object names, there is no need to provide strings. This is possible in base R too, with the function `quote()`. It quotes its input, which is capturing the R code as provided.
-
-
-```r
-quote(x)
-```
-
-```
-## x
-```
-
-```r
-quote(x) %>% class()
-```
-
-```
-## [1] "name"
-```
-
-If we want to quickly create a `name` from a string, instead of running `parse()` we can also use `as.name`.
+If we want to create a `name` from a string, for instance because you are creating on function output, you can use `as.name()`.
 
 
 ```r
@@ -159,14 +100,6 @@ When we delaying the evaluation of a function call, we arrive at the second subc
 
 ```r
 wait_for_it <- quote(x + y)
-class(wait_for_it)
-```
-
-```
-## [1] "call"
-```
-
-```r
 x <- 3; y <- 8
 eval(wait_for_it)
 ```
@@ -175,7 +108,7 @@ eval(wait_for_it)
 ## [1] 11
 ```
 
-Note that `+` is a function, like every action that happens in R. We have already seen that from a string we can get to an expression with `parse()`. Not surprisingly, `deparse()` returns the expression as a string. This allows us to do stuff like:
+Note that `+` is a function, like every action that happens in R. If we want to return an expression as a string, we can apply `deparse()` on it. This allows us to do stuff like:
 
 
 ```r
